- Vertical alignment in Label didn't work correctly when there was a scrollbar
- Knob never responded to mouse events on places where the background texture was transparent
- Text color wasn't updated in MenuBar when disabling and re-enabling widget
- Unicode text wasn't properly handled when loading/saving widgets from/to a widget file
- Fixed potential crash when creating a ProgressBar


TGUI 0.8.5  (6 April 2019)
--------------------------

- Big improvements to Gui Builder
- Svg images are now supported
- ComboBox can now contain some text when no item is selected
- Added function to ComboBox to disallow changing the selected item by scrolling the mouse wheel
- Added RightClicked signal to ListView
- Added functions to ListView to change existing items
- Support typing tabs in TextBox (if tab usage is disabled in gui)
- Added function to signals to temporarily disable callbacks
- Added addition and subtraction operators to Outline
- ChildWindow can now have a different border color in focused state
- Added function to select item in TreeView
- EditBox::setInputValidator now returns false when regex was invalid
- Let ComboBox send the ItemSelected event only after the mouse is released
- TitleBarHeight property of default renderer was ignored in ChildWindow
- Label didn't ignore events after ignoreMouseEvents was called
- Adding space around widgets in Grid to fill the given size wasn't working properly
- Loading widget from file failed when min or max was used in layout strings


TGUI 0.8.4  (23 February 2019)
------------------------------

- Added Changed signal to CheckBox and RadioButton (to more easily combine Checked and Unchecked)
- Added EscapeKeyPressed signal to ChildWindow
- ExpandDirection of ComboBox can now be set to Automatic
- Added min and max functions to layouts again
- Added horizontal grid lines to ListView
- Added option to ListView to expand the last column to fill the remaining space